<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/treasure"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radio_encounter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checkedButton="@+id/radio_individual"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_individual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/individual"
                android:textSize="24sp"/>

            <RadioButton
                android:id="@+id/radio_hoard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hoard"
                android:textSize="24sp"/>
        </RadioGroup>

        <TextView
            android:id="@+id/challenge_label"
            style="@style/textView_nexus5"
            android:layout_marginTop="16dp"
            android:text="@string/challenge" />

        <Spinner
            style="@style/spinner_nexus5"
            android:id="@+id/challenge_spinner" />

        <TextView
            android:id="@+id/party_level_label"
            style="@style/textView_nexus5"
            android:layout_marginTop="16dp"
            android:text="@string/party_level"
            android:visibility="gone"/>

        <Spinner
            style="@style/spinner_nexus5"
            android:id="@+id/party_level_spinner"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/theme_label"
            style="@style/textView_nexus5"
            android:layout_marginTop="16dp"
            android:text="@string/theme"
            android:visibility="gone"/>

        <Spinner
            style="@style/spinner_nexus5"
            android:id="@+id/theme_spinner"
            android:visibility="gone"/>

        <TextView
            style="@style/textView_nexus5"
            android:layout_marginTop="16dp"
            android:text="@string/iterations" />

        <Spinner
            style="@style/spinner_nexus5"
            android:id="@+id/iteration_spinner" />

        <Button
            style="@style/button_nexus5_land"
            android:id="@+id/treasure_send"
            android:text="@string/treasure_send" />

    </LinearLayout>
    </ScrollView>
</RelativeLayout>