<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/items"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/textView_nexus5"
            android:text="@string/challenge"
            android:layout_marginTop="43dp" />

        <Spinner
            style="@style/spinner_nexus5"
            android:id="@+id/challenge_spinner"
            android:layout_marginBottom="5dp" />


        <TextView
            style="@style/textView_nexus5"
            android:text="@string/iterations" />

        <Spinner
            style="@style/spinner_nexus5"
            android:id="@+id/iteration_spinner" />

        <Button
            style="@style/button_nexus5_small"
            android:id="@+id/item_send"
            android:text="@string/item_send" />

    </LinearLayout>
</RelativeLayout>
