<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/spells"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <TextView
            style="@style/textView_nexus5"
            android:layout_marginTop="16dp"
            android:text="@string/spell_class" />

        <Spinner
            style="@style/spinner_nexus5"
            android:id="@+id/class_spinner" />


        <TextView
            style="@style/textView_nexus5"
            android:layout_marginTop="16dp"
            android:text="@string/level" />

        <Spinner
            style="@style/spinner_nexus5"
            android:id="@+id/level_spinner" />

        <Button
            style="@style/button_nexus5_small"
            android:id="@+id/spell_send"
            android:text="@string/spell_send" />

    </LinearLayout>
</RelativeLayout>
